turtleart.triangleflat.TriangleFlat.scala.error
Compilation error:
TriangleFlat:2: error: identifier expected but ')' found.
  forward(200.);
              ^TriangleFlat:3: error: identifier expected but ')' found.
  right(120.);
            ^TriangleFlat:4: error: identifier expected but ')' found.
  forward(200.);
              ^TriangleFlat:5: error: identifier expected but ')' found.
  right(120.);
            ^TriangleFlat:6: error: identifier expected but ')' found.
  forward(200.);
              ^TriangleFlat:7: error: identifier expected but ')' found.
  right(120.);
            ^