turtleart.triangleflat.TriangleFlat.scala.code
override def run() {
  forward(200.);
  right(120.);
  forward(200.);
  right(120.);
  forward(200.);
  right(120.);
}